--- a/partials/teams.html
+++ b/partials/teams.html
@@ -1,6 +1,5 @@
-<h1>{{ err }}</h1>
-<div class="mdl-grid">
-  <div class="mdl-cell mdl-cell--4-col" ng-repeat="team in teams">
-    <team-card info="team"></team-card>
-  </div>
+<h1>{{ message }}</h1>
+<div class="mdl-cell mdl-cell--4-col" ng-repeat="team in teams">
+  <team-card info="team"></team-card>
 </div>
+  
